cabal-version:      3.0
name:               neet-st
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ussgarci
maintainer:         ussgarci
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common monad-loops
  build-depends: monad-loops == 0.4.3

common vector
  build-depends: vector >=0.12 && <0.14

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    other-modules:
        BinarySearch.BinarySearch
    build-depends:    
        base ^>=4.17.2.1,
        monad-loops,
        vector

    hs-source-dirs:   src
    default-language: Haskell2010

executable neet-st
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        neet-st

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite neet-st-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        neet-st
